--- a/Magick++/tests/Makefile.in
+++ b/Magick++/tests/Makefile.in
@@ -251,8 +251,8 @@ EXTRA_DIST = \
 
 CLEANFILES = testmagick_anim_out.miff
 
-@WIN32_TRUE@SRCDIR = '$(shell @WinPathScript@ $(srcdir)/)'
-@WIN32_FALSE@SRCDIR = '$(srcdir)/'
+@WIN32_NATIVE_TRUE@SRCDIR = '$(shell @WinPathScript@ $(srcdir)/)'
+@WIN32_NATIVE_FALSE@SRCDIR = '$(srcdir)/'
 subdir = Magick++/tests
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/magick/magick_config.h
