--- a/coders/Makefile.in
+++ b/coders/Makefile.in
@@ -240,10 +240,10 @@ AUTOMAKE_OPTIONS = 1.6 foreign
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/magick
 
-@WIN32_TRUE@MAGICK_WIN32_SRCS = clipboard.c
-@WIN32_FALSE@MAGICK_WIN32_SRCS = 
-@WIN32_TRUE@MAGICK_WIN32_MODULES = clipboard.la
-@WIN32_FALSE@MAGICK_WIN32_MODULES = 
+@HasWINGDI32_TRUE@MAGICK_GDI32_SRCS = clipboard.c emf.c
+@HasWINGDI32_FALSE@MAGICK_GDI32_SRCS = 
+@HasWINGDI32_TRUE@MAGICK_GDI32_MODULES = clipboard.la emf.la
+@HasWINGDI32_FALSE@MAGICK_GDI32_MODULES = 
 
 MAGICK_CODER_SRCS = \
   art.c avi.c avs.c bmp.c caption.c cmyk.c cut.c dcm.c dib.c dps.c dpx.c \
@@ -255,12 +255,12 @@ MAGICK_CODER_SRCS = \
   pwp.c rgb.c rla.c rle.c sct.c sfw.c sgi.c stegano.c sun.c svg.c \
   tga.c tiff.c tile.c tim.c ttf.c txt.c uil.c url.c uyvy.c vicar.c \
   vid.c viff.c wbmp.c wmf.c wpg.c x.c xbm.c xc.c xcf.c xpm.c xwd.c \
-  yuv.c $(MAGICK_WIN32_SRCS)
+  yuv.c $(MAGICK_GDI32_SRCS)
 
 @WITH_MODULES_TRUE@noinst_LTLIBRARIES = 
 @WITH_MODULES_FALSE@noinst_LTLIBRARIES = libCoders.la
 @WITH_MODULES_FALSE@libCoders_la_SOURCES = $(MAGICK_CODER_SRCS)
-@WITH_MODULES_FALSE@EXTRA_libCoders_la_SOURCES = clipboard.c
+@WITH_MODULES_FALSE@EXTRA_libCoders_la_SOURCES = clipboard.c emf.c
 
 # Additional files to distribute
 EXTRA_DIST = modules.mgk delegates.mgk.in type.mgk.in
@@ -283,21 +283,22 @@ LIBMAGICK = ../magick/libMagick.la
 # Modules which are to be built
 @WITH_MODULES_TRUE@pkg_LTLIBRARIES = \
 @WITH_MODULES_TRUE@  art.la avi.la avs.la bmp.la caption.la cmyk.la cut.la dcm.la dib.la dps.la \
-@WITH_MODULES_TRUE@	dpx.la ept.la fax.la fits.la fpx.la gif.la gradient.la gray.la hdf.la \
+@WITH_MODULES_TRUE@  dpx.la ept.la fax.la fits.la fpx.la gif.la gradient.la gray.la hdf.la \
 @WITH_MODULES_TRUE@  histogram.la html.la icon.la jbig.la jp2.la jpeg.la label.la logo.la \
 @WITH_MODULES_TRUE@  map.la mat.la matte.la meta.la miff.la mono.la mpc.la mpeg.la mpr.la msl.la \
 @WITH_MODULES_TRUE@  mtv.la mvg.la null.la otb.la palm.la pcd.la pcl.la pcx.la pdb.la pdf.la \
-@WITH_MODULES_TRUE@	pict.la pix.la plasma.la png.la pnm.la preview.la ps.la ps2.la ps3.la psd.la \
+@WITH_MODULES_TRUE@  pict.la pix.la plasma.la png.la pnm.la preview.la ps.la ps2.la ps3.la psd.la \
 @WITH_MODULES_TRUE@  pwp.la rgb.la rla.la rle.la sct.la sfw.la sgi.la stegano.la sun.la svg.la \
 @WITH_MODULES_TRUE@  tga.la tiff.la tile.la tim.la ttf.la txt.la uil.la url.la uyvy.la vicar.la \
 @WITH_MODULES_TRUE@  vid.la viff.la wbmp.la wmf.la wpg.la x.la xbm.la xc.la xcf.la xpm.la xwd.la \
-@WITH_MODULES_TRUE@  yuv.la $(MAGICK_WIN32_MODULES)
+@WITH_MODULES_TRUE@  yuv.la $(MAGICK_GDI32_MODULES)
 
 @WITH_MODULES_FALSE@pkg_LTLIBRARIES = 
 @WITH_MODULES_TRUE@MODULECOMMONFLAGS = -no-undefined -module -avoid-version
 @WITH_MODULES_FALSE@MODULECOMMONFLAGS = 
 
-AM_CFLAGS = @MODULE_EXTRA_CPPFLAGS@
+#AM_CFLAGS = @MODULE_EXTRA_CPPFLAGS@
+AM_CPPFLAGS = @MODULE_EXTRA_CPPFLAGS@
 
 # ART module
 art_la_SOURCES = art.c
@@ -327,7 +328,7 @@ caption_la_LIBADD = $(LIBMAGICK)
 # CLIPBOARD module
 clipboard_la_SOURCES = clipboard.c
 clipboard_la_LDFLAGS = $(MODULECOMMONFLAGS)
-clipboard_la_LIBADD = $(LIBMAGICK)
+clipboard_la_LIBADD = $(LIBMAGICK) @LIB_GDI32@
 
 # CMYK module
 cmyk_la_SOURCES = cmyk.c
@@ -358,6 +359,11 @@ dps_la_LIBADD = $(LIBMAGICK) @LIB_DPS@ @LIB_XEXT@ @LIB_XT@ @LIB_X11@
 dpx_la_SOURCES = dpx.c
 dpx_la_LDFLAGS = $(MODULECOMMONFLAGS)
 dpx_la_LIBADD = $(LIBMAGICK) 
+
+# EMF module
+emf_la_SOURCES = emf.c
+emf_la_LDFLAGS = $(MODULECOMMONFLAGS)
+emf_la_LIBADD = $(LIBMAGICK) @LIB_GDI32@
 
 # EPT module
 ept_la_SOURCES = ept.c
@@ -802,6 +808,9 @@ dps_la_OBJECTS = $(am_dps_la_OBJECTS)
 dpx_la_DEPENDENCIES = ../magick/libMagick.la
 am_dpx_la_OBJECTS = dpx.lo
 dpx_la_OBJECTS = $(am_dpx_la_OBJECTS)
+emf_la_DEPENDENCIES = ../magick/libMagick.la
+am_emf_la_OBJECTS = emf.lo
+emf_la_OBJECTS = $(am_emf_la_OBJECTS)
 ept_la_DEPENDENCIES = ../magick/libMagick.la
 am_ept_la_OBJECTS = ept.lo
 ept_la_OBJECTS = $(am_ept_la_OBJECTS)
@@ -849,8 +858,8 @@ am_label_la_OBJECTS = label.lo
 label_la_OBJECTS = $(am_label_la_OBJECTS)
 libCoders_la_LDFLAGS =
 libCoders_la_LIBADD =
-@WIN32_TRUE@am__objects_2 = clipboard.lo
-@WIN32_FALSE@am__objects_2 =
+@HasWINGDI32_TRUE@am__objects_2 = clipboard.lo emf.lo
+@HasWINGDI32_FALSE@am__objects_2 =
 am__objects_1 = art.lo avi.lo avs.lo bmp.lo caption.lo cmyk.lo cut.lo \
 	dcm.lo dib.lo dps.lo dpx.lo ept.lo fax.lo fits.lo fpx.lo gif.lo \
 	gradient.lo gray.lo hdf.lo histogram.lo html.lo icon.lo jbig.lo \
@@ -1066,45 +1075,46 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/cmyk.Plo ./$(DEPDIR)/cut.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/dcm.Plo ./$(DEPDIR)/dib.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/dps.Plo ./$(DEPDIR)/dpx.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/ept.Plo ./$(DEPDIR)/fax.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/fits.Plo ./$(DEPDIR)/fpx.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/gif.Plo ./$(DEPDIR)/gradient.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/gray.Plo ./$(DEPDIR)/hdf.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/histogram.Plo ./$(DEPDIR)/html.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/icon.Plo ./$(DEPDIR)/jbig.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/jp2.Plo ./$(DEPDIR)/jpeg.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/label.Plo ./$(DEPDIR)/logo.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/map.Plo ./$(DEPDIR)/mat.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/matte.Plo ./$(DEPDIR)/meta.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/miff.Plo ./$(DEPDIR)/mono.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/mpc.Plo ./$(DEPDIR)/mpeg.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/mpr.Plo ./$(DEPDIR)/msl.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/mtv.Plo ./$(DEPDIR)/mvg.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/null.Plo ./$(DEPDIR)/otb.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/palm.Plo ./$(DEPDIR)/pcd.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/pcl.Plo ./$(DEPDIR)/pcx.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/pdb.Plo ./$(DEPDIR)/pdf.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/pict.Plo ./$(DEPDIR)/pix.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/plasma.Plo ./$(DEPDIR)/png.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/pnm.Plo ./$(DEPDIR)/preview.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/ps.Plo ./$(DEPDIR)/ps2.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/ps3.Plo ./$(DEPDIR)/psd.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/pwp.Plo ./$(DEPDIR)/rgb.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/rla.Plo ./$(DEPDIR)/rle.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/sct.Plo ./$(DEPDIR)/sfw.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/sgi.Plo ./$(DEPDIR)/stegano.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/sun.Plo ./$(DEPDIR)/svg.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/tga.Plo ./$(DEPDIR)/tiff.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/tile.Plo ./$(DEPDIR)/tim.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/ttf.Plo ./$(DEPDIR)/txt.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/uil.Plo ./$(DEPDIR)/url.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/uyvy.Plo ./$(DEPDIR)/vicar.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/vid.Plo ./$(DEPDIR)/viff.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/wbmp.Plo ./$(DEPDIR)/wmf.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/wpg.Plo ./$(DEPDIR)/x.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/xbm.Plo ./$(DEPDIR)/xc.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/xcf.Plo ./$(DEPDIR)/xpm.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/xwd.Plo ./$(DEPDIR)/yuv.Plo
+@AMDEP_TRUE@	./$(DEPDIR)/emf.Plo ./$(DEPDIR)/ept.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/fax.Plo ./$(DEPDIR)/fits.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/fpx.Plo ./$(DEPDIR)/gif.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/gradient.Plo ./$(DEPDIR)/gray.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/hdf.Plo ./$(DEPDIR)/histogram.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/html.Plo ./$(DEPDIR)/icon.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/jbig.Plo ./$(DEPDIR)/jp2.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/jpeg.Plo ./$(DEPDIR)/label.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/logo.Plo ./$(DEPDIR)/map.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/mat.Plo ./$(DEPDIR)/matte.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/meta.Plo ./$(DEPDIR)/miff.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/mono.Plo ./$(DEPDIR)/mpc.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/mpeg.Plo ./$(DEPDIR)/mpr.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/msl.Plo ./$(DEPDIR)/mtv.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/mvg.Plo ./$(DEPDIR)/null.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/otb.Plo ./$(DEPDIR)/palm.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/pcd.Plo ./$(DEPDIR)/pcl.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/pcx.Plo ./$(DEPDIR)/pdb.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/pdf.Plo ./$(DEPDIR)/pict.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/pix.Plo ./$(DEPDIR)/plasma.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/png.Plo ./$(DEPDIR)/pnm.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/preview.Plo ./$(DEPDIR)/ps.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/ps2.Plo ./$(DEPDIR)/ps3.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/psd.Plo ./$(DEPDIR)/pwp.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/rgb.Plo ./$(DEPDIR)/rla.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/rle.Plo ./$(DEPDIR)/sct.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/sfw.Plo ./$(DEPDIR)/sgi.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/stegano.Plo ./$(DEPDIR)/sun.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/svg.Plo ./$(DEPDIR)/tga.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/tiff.Plo ./$(DEPDIR)/tile.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/tim.Plo ./$(DEPDIR)/ttf.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/txt.Plo ./$(DEPDIR)/uil.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/url.Plo ./$(DEPDIR)/uyvy.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/vicar.Plo ./$(DEPDIR)/vid.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/viff.Plo ./$(DEPDIR)/wbmp.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/wmf.Plo ./$(DEPDIR)/wpg.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/x.Plo ./$(DEPDIR)/xbm.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/xc.Plo ./$(DEPDIR)/xcf.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/xpm.Plo ./$(DEPDIR)/xwd.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/yuv.Plo
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) \
@@ -1117,33 +1127,34 @@ DIST_SOURCES = $(art_la_SOURCES) $(avi_la_SOURCES) $(avs_la_SOURCES) \
 	$(bmp_la_SOURCES) $(caption_la_SOURCES) $(clipboard_la_SOURCES) \
 	$(cmyk_la_SOURCES) $(cut_la_SOURCES) $(dcm_la_SOURCES) \
 	$(dib_la_SOURCES) $(dps_la_SOURCES) $(dpx_la_SOURCES) \
-	$(ept_la_SOURCES) $(fax_la_SOURCES) $(fits_la_SOURCES) \
-	$(fpx_la_SOURCES) $(gif_la_SOURCES) $(gradient_la_SOURCES) \
-	$(gray_la_SOURCES) $(hdf_la_SOURCES) $(histogram_la_SOURCES) \
-	$(html_la_SOURCES) $(icon_la_SOURCES) $(jbig_la_SOURCES) \
-	$(jp2_la_SOURCES) $(jpeg_la_SOURCES) $(label_la_SOURCES) \
-	$(libCoders_la_SOURCES) $(EXTRA_libCoders_la_SOURCES) \
-	$(logo_la_SOURCES) $(map_la_SOURCES) $(mat_la_SOURCES) \
-	$(matte_la_SOURCES) $(meta_la_SOURCES) $(miff_la_SOURCES) \
-	$(mono_la_SOURCES) $(mpc_la_SOURCES) $(mpeg_la_SOURCES) \
-	$(mpr_la_SOURCES) $(msl_la_SOURCES) $(mtv_la_SOURCES) \
-	$(mvg_la_SOURCES) $(null_la_SOURCES) $(otb_la_SOURCES) \
-	$(palm_la_SOURCES) $(pcd_la_SOURCES) $(pcl_la_SOURCES) \
-	$(pcx_la_SOURCES) $(pdb_la_SOURCES) $(pdf_la_SOURCES) \
-	$(pict_la_SOURCES) $(pix_la_SOURCES) $(plasma_la_SOURCES) \
-	$(png_la_SOURCES) $(pnm_la_SOURCES) $(preview_la_SOURCES) \
-	$(ps_la_SOURCES) $(ps2_la_SOURCES) $(ps3_la_SOURCES) \
-	$(psd_la_SOURCES) $(pwp_la_SOURCES) $(rgb_la_SOURCES) \
-	$(rla_la_SOURCES) $(rle_la_SOURCES) $(sct_la_SOURCES) \
-	$(sfw_la_SOURCES) $(sgi_la_SOURCES) $(stegano_la_SOURCES) \
-	$(sun_la_SOURCES) $(svg_la_SOURCES) $(tga_la_SOURCES) \
-	$(tiff_la_SOURCES) $(tile_la_SOURCES) $(tim_la_SOURCES) \
-	$(ttf_la_SOURCES) $(txt_la_SOURCES) $(uil_la_SOURCES) \
-	$(url_la_SOURCES) $(uyvy_la_SOURCES) $(vicar_la_SOURCES) \
-	$(vid_la_SOURCES) $(viff_la_SOURCES) $(wbmp_la_SOURCES) \
-	$(wmf_la_SOURCES) $(wpg_la_SOURCES) $(x_la_SOURCES) \
-	$(xbm_la_SOURCES) $(xc_la_SOURCES) $(xcf_la_SOURCES) \
-	$(xpm_la_SOURCES) $(xwd_la_SOURCES) $(yuv_la_SOURCES)
+	$(emf_la_SOURCES) $(ept_la_SOURCES) $(fax_la_SOURCES) \
+	$(fits_la_SOURCES) $(fpx_la_SOURCES) $(gif_la_SOURCES) \
+	$(gradient_la_SOURCES) $(gray_la_SOURCES) $(hdf_la_SOURCES) \
+	$(histogram_la_SOURCES) $(html_la_SOURCES) $(icon_la_SOURCES) \
+	$(jbig_la_SOURCES) $(jp2_la_SOURCES) $(jpeg_la_SOURCES) \
+	$(label_la_SOURCES) $(libCoders_la_SOURCES) \
+	$(EXTRA_libCoders_la_SOURCES) $(logo_la_SOURCES) \
+	$(map_la_SOURCES) $(mat_la_SOURCES) $(matte_la_SOURCES) \
+	$(meta_la_SOURCES) $(miff_la_SOURCES) $(mono_la_SOURCES) \
+	$(mpc_la_SOURCES) $(mpeg_la_SOURCES) $(mpr_la_SOURCES) \
+	$(msl_la_SOURCES) $(mtv_la_SOURCES) $(mvg_la_SOURCES) \
+	$(null_la_SOURCES) $(otb_la_SOURCES) $(palm_la_SOURCES) \
+	$(pcd_la_SOURCES) $(pcl_la_SOURCES) $(pcx_la_SOURCES) \
+	$(pdb_la_SOURCES) $(pdf_la_SOURCES) $(pict_la_SOURCES) \
+	$(pix_la_SOURCES) $(plasma_la_SOURCES) $(png_la_SOURCES) \
+	$(pnm_la_SOURCES) $(preview_la_SOURCES) $(ps_la_SOURCES) \
+	$(ps2_la_SOURCES) $(ps3_la_SOURCES) $(psd_la_SOURCES) \
+	$(pwp_la_SOURCES) $(rgb_la_SOURCES) $(rla_la_SOURCES) \
+	$(rle_la_SOURCES) $(sct_la_SOURCES) $(sfw_la_SOURCES) \
+	$(sgi_la_SOURCES) $(stegano_la_SOURCES) $(sun_la_SOURCES) \
+	$(svg_la_SOURCES) $(tga_la_SOURCES) $(tiff_la_SOURCES) \
+	$(tile_la_SOURCES) $(tim_la_SOURCES) $(ttf_la_SOURCES) \
+	$(txt_la_SOURCES) $(uil_la_SOURCES) $(url_la_SOURCES) \
+	$(uyvy_la_SOURCES) $(vicar_la_SOURCES) $(vid_la_SOURCES) \
+	$(viff_la_SOURCES) $(wbmp_la_SOURCES) $(wmf_la_SOURCES) \
+	$(wpg_la_SOURCES) $(x_la_SOURCES) $(xbm_la_SOURCES) \
+	$(xc_la_SOURCES) $(xcf_la_SOURCES) $(xpm_la_SOURCES) \
+	$(xwd_la_SOURCES) $(yuv_la_SOURCES)
 DATA = $(pkg_DATA) $(pkgdata_DATA)
 
 HEADERS = $(noinst_HEADERS)
@@ -1151,7 +1162,7 @@ HEADERS = $(noinst_HEADERS)
 DIST_COMMON = $(noinst_HEADERS) Makefile.am Makefile.in \
 	delegates.mgk.in type-ghostscript.mgk.in type-solaris.mgk.in \
 	type-windows.mgk.in type.mgk.in
-SOURCES = $(art_la_SOURCES) $(avi_la_SOURCES) $(avs_la_SOURCES) $(bmp_la_SOURCES) $(caption_la_SOURCES) $(clipboard_la_SOURCES) $(cmyk_la_SOURCES) $(cut_la_SOURCES) $(dcm_la_SOURCES) $(dib_la_SOURCES) $(dps_la_SOURCES) $(dpx_la_SOURCES) $(ept_la_SOURCES) $(fax_la_SOURCES) $(fits_la_SOURCES) $(fpx_la_SOURCES) $(gif_la_SOURCES) $(gradient_la_SOURCES) $(gray_la_SOURCES) $(hdf_la_SOURCES) $(histogram_la_SOURCES) $(html_la_SOURCES) $(icon_la_SOURCES) $(jbig_la_SOURCES) $(jp2_la_SOURCES) $(jpeg_la_SOURCES) $(label_la_SOURCES) $(libCoders_la_SOURCES) $(EXTRA_libCoders_la_SOURCES) $(logo_la_SOURCES) $(map_la_SOURCES) $(mat_la_SOURCES) $(matte_la_SOURCES) $(meta_la_SOURCES) $(miff_la_SOURCES) $(mono_la_SOURCES) $(mpc_la_SOURCES) $(mpeg_la_SOURCES) $(mpr_la_SOURCES) $(msl_la_SOURCES) $(mtv_la_SOURCES) $(mvg_la_SOURCES) $(null_la_SOURCES) $(otb_la_SOURCES) $(palm_la_SOURCES) $(pcd_la_SOURCES) $(pcl_la_SOURCES) $(pcx_la_SOURCES) $(pdb_la_SOURCES) $(pdf_la_SOURCES) $(pict_la_SOURCES) $(pix_la_SOURCES) $(plasma_la_SOURCES) $(png_la_SOURCES) $(pnm_la_SOURCES) $(preview_la_SOURCES) $(ps_la_SOURCES) $(ps2_la_SOURCES) $(ps3_la_SOURCES) $(psd_la_SOURCES) $(pwp_la_SOURCES) $(rgb_la_SOURCES) $(rla_la_SOURCES) $(rle_la_SOURCES) $(sct_la_SOURCES) $(sfw_la_SOURCES) $(sgi_la_SOURCES) $(stegano_la_SOURCES) $(sun_la_SOURCES) $(svg_la_SOURCES) $(tga_la_SOURCES) $(tiff_la_SOURCES) $(tile_la_SOURCES) $(tim_la_SOURCES) $(ttf_la_SOURCES) $(txt_la_SOURCES) $(uil_la_SOURCES) $(url_la_SOURCES) $(uyvy_la_SOURCES) $(vicar_la_SOURCES) $(vid_la_SOURCES) $(viff_la_SOURCES) $(wbmp_la_SOURCES) $(wmf_la_SOURCES) $(wpg_la_SOURCES) $(x_la_SOURCES) $(xbm_la_SOURCES) $(xc_la_SOURCES) $(xcf_la_SOURCES) $(xpm_la_SOURCES) $(xwd_la_SOURCES) $(yuv_la_SOURCES)
+SOURCES = $(art_la_SOURCES) $(avi_la_SOURCES) $(avs_la_SOURCES) $(bmp_la_SOURCES) $(caption_la_SOURCES) $(clipboard_la_SOURCES) $(cmyk_la_SOURCES) $(cut_la_SOURCES) $(dcm_la_SOURCES) $(dib_la_SOURCES) $(dps_la_SOURCES) $(dpx_la_SOURCES) $(emf_la_SOURCES) $(ept_la_SOURCES) $(fax_la_SOURCES) $(fits_la_SOURCES) $(fpx_la_SOURCES) $(gif_la_SOURCES) $(gradient_la_SOURCES) $(gray_la_SOURCES) $(hdf_la_SOURCES) $(histogram_la_SOURCES) $(html_la_SOURCES) $(icon_la_SOURCES) $(jbig_la_SOURCES) $(jp2_la_SOURCES) $(jpeg_la_SOURCES) $(label_la_SOURCES) $(libCoders_la_SOURCES) $(EXTRA_libCoders_la_SOURCES) $(logo_la_SOURCES) $(map_la_SOURCES) $(mat_la_SOURCES) $(matte_la_SOURCES) $(meta_la_SOURCES) $(miff_la_SOURCES) $(mono_la_SOURCES) $(mpc_la_SOURCES) $(mpeg_la_SOURCES) $(mpr_la_SOURCES) $(msl_la_SOURCES) $(mtv_la_SOURCES) $(mvg_la_SOURCES) $(null_la_SOURCES) $(otb_la_SOURCES) $(palm_la_SOURCES) $(pcd_la_SOURCES) $(pcl_la_SOURCES) $(pcx_la_SOURCES) $(pdb_la_SOURCES) $(pdf_la_SOURCES) $(pict_la_SOURCES) $(pix_la_SOURCES) $(plasma_la_SOURCES) $(png_la_SOURCES) $(pnm_la_SOURCES) $(preview_la_SOURCES) $(ps_la_SOURCES) $(ps2_la_SOURCES) $(ps3_la_SOURCES) $(psd_la_SOURCES) $(pwp_la_SOURCES) $(rgb_la_SOURCES) $(rla_la_SOURCES) $(rle_la_SOURCES) $(sct_la_SOURCES) $(sfw_la_SOURCES) $(sgi_la_SOURCES) $(stegano_la_SOURCES) $(sun_la_SOURCES) $(svg_la_SOURCES) $(tga_la_SOURCES) $(tiff_la_SOURCES) $(tile_la_SOURCES) $(tim_la_SOURCES) $(ttf_la_SOURCES) $(txt_la_SOURCES) $(uil_la_SOURCES) $(url_la_SOURCES) $(uyvy_la_SOURCES) $(vicar_la_SOURCES) $(vid_la_SOURCES) $(viff_la_SOURCES) $(wbmp_la_SOURCES) $(wmf_la_SOURCES) $(wpg_la_SOURCES) $(x_la_SOURCES) $(xbm_la_SOURCES) $(xc_la_SOURCES) $(xcf_la_SOURCES) $(xpm_la_SOURCES) $(xwd_la_SOURCES) $(yuv_la_SOURCES)
 
 all: all-am
 
@@ -1230,6 +1241,8 @@ dps.la: $(dps_la_OBJECTS) $(dps_la_DEPENDENCIES)
 	$(LINK) -rpath $(pkgdir) $(dps_la_LDFLAGS) $(dps_la_OBJECTS) $(dps_la_LIBADD) $(LIBS)
 dpx.la: $(dpx_la_OBJECTS) $(dpx_la_DEPENDENCIES) 
 	$(LINK) -rpath $(pkgdir) $(dpx_la_LDFLAGS) $(dpx_la_OBJECTS) $(dpx_la_LIBADD) $(LIBS)
+emf.la: $(emf_la_OBJECTS) $(emf_la_DEPENDENCIES) 
+	$(LINK) -rpath $(pkgdir) $(emf_la_LDFLAGS) $(emf_la_OBJECTS) $(emf_la_LIBADD) $(LIBS)
 ept.la: $(ept_la_OBJECTS) $(ept_la_DEPENDENCIES) 
 	$(LINK) -rpath $(pkgdir) $(ept_la_LDFLAGS) $(ept_la_OBJECTS) $(ept_la_LIBADD) $(LIBS)
 fax.la: $(fax_la_OBJECTS) $(fax_la_DEPENDENCIES) 
@@ -1407,6 +1420,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dib.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dps.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dpx.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/emf.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ept.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fax.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fits.Plo@am__quote@
